# tic-tac-toe

./: .gitignore  CMakeLists.txt  Docker.dockerfile  Readme.md  license  main.cpp  utils.cpp  utils.hpp
.github/workflows/: build.yml  release.yml
include/: utils.hpp
src/: main.cpp  utils.cpp
